RESOLVED FIXED213690
REGRESSION (r262776): Leak of NSMutableURLRequest in -[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]
https://bugs.webkit.org/show_bug.cgi?id=213690
Summary REGRESSION (r262776): Leak of NSMutableURLRequest in -[WebCoreResourceHandleA...
David Kilzer (:ddkilzer)
Reported 2020-06-27 20:40:11 PDT
Leak of NSMutableURLRequest in -[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]: + if (equalLettersIgnoringASCIICase(m_handle->firstRequest().httpMethod(), "post") && !m_handle->firstRequest().hasHTTPHeaderField(HTTPHeaderName::ContentType)) { + NSMutableURLRequest *modifiedRequest = [newRequest mutableCopy]; + [modifiedRequest setValue:nil forHTTPHeaderField:@"Content-Type"]; + return modifiedRequest; // LEAK: This variable needs to be autoreleased. + } Regressed with: Bug 211999: XMLHTTPRequest.send should not send Content-Type headers when Blob has no type <https://bugs.webkit.org/show_bug.cgi?id=211999> <https://trac.webkit.org/r262776>
Attachments
Patch v1 (2.35 KB, patch)
2020-06-27 20:43 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-06-27 20:40:37 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-06-27 20:43:36 PDT
Created attachment 402980 [details] Patch v1
EWS
Comment 3 2020-06-29 03:54:39 PDT
Committed r263653: <https://trac.webkit.org/changeset/263653> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402980 [details].
Note You need to log in before you can comment on or make changes to this bug.