REGRESSION (r262776): Leak of NSMutableURLRequest in -[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:] <https://webkit.org/b/213690> <rdar://problem/64853619>

Reviewed by Anders Carlsson.

* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]):
- Use RetainPtr<> for the mutable copy and autorelease the
  return value.


Canonical link: https://commits.webkit.org/226518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263653 268f45cc-cd09-0410-ab3c-d52691b4dbfc