Source/WebCore/platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm
@@ -124,9 +124,9 @@ static bool scheduledWithCustomRunLoopMode(const Optional<SchedulePairHashSet>& 
     if (!redirectResponse) {
         // CFNetwork will add "application/x-www-form-urlencoded" content-type for POST, even if no Content-Type was specified, remove it in that case.
         if (m_handle && equalLettersIgnoringASCIICase(m_handle->firstRequest().httpMethod(), "post") && !m_handle->firstRequest().hasHTTPHeaderField(HTTPHeaderName::ContentType)) {
-            NSMutableURLRequest *modifiedRequest = [newRequest mutableCopy];
-            [modifiedRequest setValue:nil forHTTPHeaderField:@"Content-Type"];
-            return modifiedRequest;
+            auto mutableModifiedRequest = adoptNS([newRequest mutableCopy]);
+            [mutableModifiedRequest setValue:nil forHTTPHeaderField:@"Content-Type"];
+            return mutableModifiedRequest.autorelease();
         }
         return newRequest;
     }
